syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.proto";
option java_multiple_files = true;

message TransactionId {
    bytes address = 1;
    uint64 validStart = 2;
}
